--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
-    "@tabler/icons-react": "^3.31.0",
+    "@tabler/icons-react": "^3.33.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.510.0",
-    "motion": "^12.11.4",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.12.1",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
